_generated-doc/3.0/config/quarkus-hibernate-orm-general-config-items.adoc

:summaryTableId: quarkus-hibernate-orm-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-general-config-items_configuration]]link:#quarkus-hibernate-orm-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.datasource]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.datasource[quarkus.hibernate-orm.datasource]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.packages]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.packages[quarkus.hibernate-orm.packages]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PACKAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PACKAGES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.sql-load-script]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.sql-load-script[quarkus.hibernate-orm.sql-load-script]`

[.description]
--
Path to a file containing the SQL statements to execute when Hibernate ORM starts.

The file is retrieved from the classpath resources,
so it must be located in the resources directory (e.g. `src/main/resources`).

The default value for this setting differs depending on the Quarkus launch mode:

* In dev and test modes, it defaults to `import.sql`.
  Simply add an `import.sql` file in the root of your resources directory
  and it will be picked up without having to set this property.
  Pass `no-file` to force Hibernate ORM to ignore the SQL import file.
* In production mode, it defaults to `no-file`.
  It means Hibernate ORM won't try to execute any SQL import file by default.
  Pass an explicit value to force Hibernate ORM to execute the SQL import file.

If you need different SQL statements between dev mode, test (`@QuarkusTest`) and in production, use Quarkus
https://quarkus.io/guides/config#configuration-profiles[configuration profiles facility].

[source,property]
.application.properties
----
%dev.quarkus.hibernate-orm.sql-load-script = import-dev.sql
%test.quarkus.hibernate-orm.sql-load-script = import-test.sql
%prod.quarkus.hibernate-orm.sql-load-script = no-file
----

[NOTE]
====
Quarkus supports `.sql` file with SQL statements or comments spread over multiple lines.
Each SQL statement must be terminated by a semicolon.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SQL_LOAD_SCRIPT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SQL_LOAD_SCRIPT+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`import.sql in DEV, TEST ; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.physical-naming-strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.physical-naming-strategy[quarkus.hibernate-orm.physical-naming-strategy]`

[.description]
--
Pluggable strategy contract for applying physical naming rules for database object names. Class name of the Hibernate PhysicalNamingStrategy implementation

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PHYSICAL_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PHYSICAL_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.implicit-naming-strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.implicit-naming-strategy[quarkus.hibernate-orm.implicit-naming-strategy]`

[.description]
--
Pluggable strategy for applying implicit naming rules when an explicit name is not given. Class name of the Hibernate ImplicitNamingStrategy implementation

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_IMPLICIT_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_IMPLICIT_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.metadata-builder-contributor]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.metadata-builder-contributor[quarkus.hibernate-orm.metadata-builder-contributor]`

[.description]
--
Class name of a custom
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/spi/MetadataBuilderContributor.html[`org.hibernate.boot.spi.MetadataBuilderContributor`]
implementation.

[NOTE]
====
Not all customization options exposed by
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/MetadataBuilder.html[`org.hibernate.boot.MetadataBuilder`]
will work correctly. Stay clear of options related to classpath scanning in particular.

This setting is exposed mainly to allow registration of types, converters and SQL functions.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_METADATA_BUILDER_CONTRIBUTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_METADATA_BUILDER_CONTRIBUTOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.mapping-files]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.mapping-files[quarkus.hibernate-orm.mapping-files]`

[.description]
--
XML files to configure the entity mapping, e.g. `META-INF/my-orm.xml`. 
Defaults to `META-INF/orm.xml` if it exists. Pass `no-file` to force Hibernate ORM to ignore `META-INF/orm.xml`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MAPPING_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MAPPING_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`META-INF/orm.xml if it exists; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.quote-identifiers.strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.quote-identifiers.strategy[quarkus.hibernate-orm.quote-identifiers.strategy]`

[.description]
--
Identifiers can be quoted using one of the available strategies. 
Set to `none` by default, meaning no identifiers will be quoted. If set to `all`, all identifiers and column definitions will be quoted. Additionally, setting it to `all-except-column-definitions` will skip the column definitions, which can usually be required when they exist, or else use the option `only-keywords` to quote only identifiers deemed SQL keywords by the Hibernate ORM dialect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUOTE_IDENTIFIERS_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUOTE_IDENTIFIERS_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `all`, `all-except-column-definitions`, `only-keywords` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.second-level-caching-enabled]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.second-level-caching-enabled[quarkus.hibernate-orm.second-level-caching-enabled]`

[.description]
--
The default in Quarkus is for 2nd level caching to be enabled, and a good implementation is already integrated for you. 
Just cherry-pick which entities should be using the cache. 
Set this to false to disable all 2nd level caches.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SECOND_LEVEL_CACHING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SECOND_LEVEL_CACHING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.multitenant]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.multitenant[quarkus.hibernate-orm.multitenant]`

[.description]
--
Defines the method for multi-tenancy (DATABASE, NONE, SCHEMA). The complete list of allowed values is available in the
https://javadoc.io/doc/org.hibernate/hibernate-core/5.6.10.Final/org/hibernate/MultiTenancyStrategy.html[Hibernate ORM
JavaDoc].
The type DISCRIMINATOR is currently not supported. The default value is NONE (no multi-tenancy).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MULTITENANT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MULTITENANT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.multitenant-schema-datasource]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.multitenant-schema-datasource[quarkus.hibernate-orm.multitenant-schema-datasource]`

[.description]
--
Defines the name of the datasource to use in case of SCHEMA approach. The datasource of the persistence unit will be used if not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_MULTITENANT_SCHEMA_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_MULTITENANT_SCHEMA_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.validate-in-dev-mode]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.validate-in-dev-mode[quarkus.hibernate-orm.validate-in-dev-mode]`

[.description]
--
If hibernate is not auto generating the schema, and Quarkus is running in development mode then Quarkus will attempt to validate the database after startup and print a log message if there are any problems.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_VALIDATE_IN_DEV_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_VALIDATE_IN_DEV_MODE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.persistence-xml.ignore]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.persistence-xml.ignore[quarkus.hibernate-orm.persistence-xml.ignore]`

[.description]
--
If `true`, Quarkus will ignore any `persistence.xml` file in the classpath and rely exclusively on the Quarkus configuration.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_PERSISTENCE_XML_IGNORE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_PERSISTENCE_XML_IGNORE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.active]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.active[quarkus.hibernate-orm.active]`

[.description]
--
Whether this persistence unit should be active at runtime.

If the persistence unit is not active, it won't start with the application,
and accessing the corresponding EntityManagerFactory/EntityManager or SessionFactory/Session
will not be possible.

Note that if Hibernate ORM is disabled (i.e. `quarkus.hibernate-orm.enabled` is set to `false`),
all persistence units are deactivated, and setting this property to `true` will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_ACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`'true' if Hibernate ORM is enabled; 'false' otherwise`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.unsupported-properties-full-property-key]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.unsupported-properties-full-property-key[quarkus.hibernate-orm.unsupported-properties]`

[.description]
--
Properties that should be passed on directly to Hibernate ORM.
Use the full configuration property key here,
for instance `quarkus.hibernate-orm.unsupported-properties."hibernate.order_inserts" = true`.

[WARNING]
====
Properties set here are completely unsupported:
as Quarkus doesn't generally know about these properties and their purpose,
there is absolutely no guarantee that they will work correctly,
and even if they do, that may change when upgrading to a newer version of Quarkus
(even just a micro/patch version).
====

Consider using a supported configuration property before falling back to unsupported ones.
If none exists, make sure to file a feature request so that a supported configuration property can be added to Quarkus,
and more importantly so that the configuration property is tested regularly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_UNSUPPORTED_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_UNSUPPORTED_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect-dialect-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect-dialect-related-configuration[Dialect related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect[quarkus.hibernate-orm.dialect]`

[.description]
--
Class name of the Hibernate ORM dialect. The complete list of bundled dialects is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/dialect/package-summary.html[Hibernate ORM
JavaDoc].

[NOTE]
====
Not all the dialects are supported in GraalVM native executables: we currently provide driver extensions for
PostgreSQL,
MariaDB, Microsoft SQL Server and H2.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DIALECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DIALECT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect.storage-engine]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.dialect.storage-engine[quarkus.hibernate-orm.dialect.storage-engine]`

[.description]
--
The storage engine to use when the dialect supports multiple storage engines.

E.g. `MyISAM` or `InnoDB` for MySQL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DIALECT_STORAGE_ENGINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DIALECT_STORAGE_ENGINE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query-query-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query-query-related-configuration[Query related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.query-plan-cache-max-size[quarkus.hibernate-orm.query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.default-null-ordering]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.default-null-ordering[quarkus.hibernate-orm.query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_DEFAULT_NULL_ORDERING+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `first`, `last` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.in-clause-parameter-padding]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.query.in-clause-parameter-padding[quarkus.hibernate-orm.query.in-clause-parameter-padding]`

[.description]
--
Enables IN clause parameter padding which improves statement caching.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_QUERY_IN_CLAUSE_PARAMETER_PADDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_QUERY_IN_CLAUSE_PARAMETER_PADDING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database-database-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.charset]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.charset[quarkus.hibernate-orm.database.charset]`

[.description]
--
The charset of the database. 
Used for DDL generation and also for the SQL import scripts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation[quarkus.hibernate-orm.database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation.create-schemas[quarkus.hibernate-orm.database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.generation.halt-on-error[quarkus.hibernate-orm.database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_HALT_ON_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_GENERATION_HALT_ON_ERROR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.default-catalog]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.default-catalog[quarkus.hibernate-orm.database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_CATALOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_CATALOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.default-schema]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.database.default-schema[quarkus.hibernate-orm.database.default-schema]`

[.description]
--
The default schema to use for the database objects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DATABASE_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc-jdbc-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc-jdbc-related-configuration[JDBC related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.timezone]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.timezone[quarkus.hibernate-orm.jdbc.timezone]`

[.description]
--
The time zone pushed to the JDBC driver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_TIMEZONE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_TIMEZONE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.statement-fetch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.statement-fetch-size[quarkus.hibernate-orm.jdbc.statement-fetch-size]`

[.description]
--
How many rows are fetched at a time by the JDBC driver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_FETCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_FETCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.statement-batch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.jdbc.statement-batch-size[quarkus.hibernate-orm.jdbc.statement-batch-size]`

[.description]
--
The number of updates (inserts, updates and deletes) that are sent by the JDBC driver at one time for execution.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_JDBC_STATEMENT_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch-fetching-logic-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch-fetching-logic-configuration[Fetching logic configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch.batch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch.batch-size[quarkus.hibernate-orm.fetch.batch-size]`

[.description]
--
The size of the batches used when loading entities and collections.

`-1` means batch loading is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_FETCH_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_FETCH_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`16`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch.max-depth]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.fetch.max-depth[quarkus.hibernate-orm.fetch.max-depth]`

[.description]
--
The maximum depth of outer join fetch tree for single-ended associations (one-to-one, many-to-one).

A `0` disables default outer join fetching.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_FETCH_MAX_DEPTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_FETCH_MAX_DEPTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache-caching-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache-caching-configuration[Caching configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache.-cache-.expiration.max-idle]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache.-cache-.expiration.max-idle[quarkus.hibernate-orm.cache."cache".expiration.max-idle]`

[.description]
--
The maximum time before an object of the cache is considered expired.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__EXPIRATION_MAX_IDLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__EXPIRATION_MAX_IDLE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache.-cache-.memory.object-count]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.cache.-cache-.memory.object-count[quarkus.hibernate-orm.cache."cache".memory.object-count]`

[.description]
--
The maximum number of objects kept in memory in the cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__MEMORY_OBJECT_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_CACHE__CACHE__MEMORY_OBJECT_COUNT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.discriminator-discriminator-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.discriminator-discriminator-related-configuration[Discriminator related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined[quarkus.hibernate-orm.discriminator.ignore-explicit-for-joined]`

[.description]
--
Existing applications rely (implicitly or explicitly) on Hibernate ignoring any DiscriminatorColumn declarations on joined inheritance hierarchies. This setting allows these applications to maintain the legacy behavior of DiscriminatorColumn annotations being ignored when paired with joined inheritance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.persistence-units-additional-named-persistence-units[Additional named persistence units]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.datasource]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.datasource[quarkus.hibernate-orm."persistence-unit-name".datasource]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.packages]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.packages[quarkus.hibernate-orm."persistence-unit-name".packages]`

[.description]
--
ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__PACKAGES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__PACKAGES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.sql-load-script]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.sql-load-script[quarkus.hibernate-orm."persistence-unit-name".sql-load-script]`

[.description]
--
Path to a file containing the SQL statements to execute when Hibernate ORM starts.

The file is retrieved from the classpath resources,
so it must be located in the resources directory (e.g. `src/main/resources`).

The default value for this setting differs depending on the Quarkus launch mode:

* In dev and test modes, it defaults to `import.sql`.
  Simply add an `import.sql` file in the root of your resources directory
  and it will be picked up without having to set this property.
  Pass `no-file` to force Hibernate ORM to ignore the SQL import file.
* In production mode, it defaults to `no-file`.
  It means Hibernate ORM won't try to execute any SQL import file by default.
  Pass an explicit value to force Hibernate ORM to execute the SQL import file.

If you need different SQL statements between dev mode, test (`@QuarkusTest`) and in production, use Quarkus
https://quarkus.io/guides/config#configuration-profiles[configuration profiles facility].

[source,property]
.application.properties
----
%dev.quarkus.hibernate-orm.sql-load-script = import-dev.sql
%test.quarkus.hibernate-orm.sql-load-script = import-test.sql
%prod.quarkus.hibernate-orm.sql-load-script = no-file
----

[NOTE]
====
Quarkus supports `.sql` file with SQL statements or comments spread over multiple lines.
Each SQL statement must be terminated by a semicolon.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SQL_LOAD_SCRIPT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SQL_LOAD_SCRIPT+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`import.sql in DEV, TEST ; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.physical-naming-strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.physical-naming-strategy[quarkus.hibernate-orm."persistence-unit-name".physical-naming-strategy]`

[.description]
--
Pluggable strategy contract for applying physical naming rules for database object names. Class name of the Hibernate PhysicalNamingStrategy implementation

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__PHYSICAL_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__PHYSICAL_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.implicit-naming-strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.implicit-naming-strategy[quarkus.hibernate-orm."persistence-unit-name".implicit-naming-strategy]`

[.description]
--
Pluggable strategy for applying implicit naming rules when an explicit name is not given. Class name of the Hibernate ImplicitNamingStrategy implementation

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__IMPLICIT_NAMING_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__IMPLICIT_NAMING_STRATEGY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.metadata-builder-contributor]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.metadata-builder-contributor[quarkus.hibernate-orm."persistence-unit-name".metadata-builder-contributor]`

[.description]
--
Class name of a custom
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/spi/MetadataBuilderContributor.html[`org.hibernate.boot.spi.MetadataBuilderContributor`]
implementation.

[NOTE]
====
Not all customization options exposed by
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/boot/MetadataBuilder.html[`org.hibernate.boot.MetadataBuilder`]
will work correctly. Stay clear of options related to classpath scanning in particular.

This setting is exposed mainly to allow registration of types, converters and SQL functions.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__METADATA_BUILDER_CONTRIBUTOR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__METADATA_BUILDER_CONTRIBUTOR+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.mapping-files]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.mapping-files[quarkus.hibernate-orm."persistence-unit-name".mapping-files]`

[.description]
--
XML files to configure the entity mapping, e.g. `META-INF/my-orm.xml`. 
Defaults to `META-INF/orm.xml` if it exists. Pass `no-file` to force Hibernate ORM to ignore `META-INF/orm.xml`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MAPPING_FILES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MAPPING_FILES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`META-INF/orm.xml if it exists; no-file otherwise`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.quote-identifiers.strategy]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.quote-identifiers.strategy[quarkus.hibernate-orm."persistence-unit-name".quote-identifiers.strategy]`

[.description]
--
Identifiers can be quoted using one of the available strategies. 
Set to `none` by default, meaning no identifiers will be quoted. If set to `all`, all identifiers and column definitions will be quoted. Additionally, setting it to `all-except-column-definitions` will skip the column definitions, which can usually be required when they exist, or else use the option `only-keywords` to quote only identifiers deemed SQL keywords by the Hibernate ORM dialect.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUOTE_IDENTIFIERS_STRATEGY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUOTE_IDENTIFIERS_STRATEGY+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `all`, `all-except-column-definitions`, `only-keywords` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.second-level-caching-enabled]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.second-level-caching-enabled[quarkus.hibernate-orm."persistence-unit-name".second-level-caching-enabled]`

[.description]
--
The default in Quarkus is for 2nd level caching to be enabled, and a good implementation is already integrated for you. 
Just cherry-pick which entities should be using the cache. 
Set this to false to disable all 2nd level caches.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SECOND_LEVEL_CACHING_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SECOND_LEVEL_CACHING_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.multitenant]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.multitenant[quarkus.hibernate-orm."persistence-unit-name".multitenant]`

[.description]
--
Defines the method for multi-tenancy (DATABASE, NONE, SCHEMA). The complete list of allowed values is available in the
https://javadoc.io/doc/org.hibernate/hibernate-core/5.6.10.Final/org/hibernate/MultiTenancyStrategy.html[Hibernate ORM
JavaDoc].
The type DISCRIMINATOR is currently not supported. The default value is NONE (no multi-tenancy).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MULTITENANT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MULTITENANT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.multitenant-schema-datasource]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.multitenant-schema-datasource[quarkus.hibernate-orm."persistence-unit-name".multitenant-schema-datasource]`

[.description]
--
Defines the name of the datasource to use in case of SCHEMA approach. The datasource of the persistence unit will be used if not set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MULTITENANT_SCHEMA_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__MULTITENANT_SCHEMA_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.validate-in-dev-mode]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.validate-in-dev-mode[quarkus.hibernate-orm."persistence-unit-name".validate-in-dev-mode]`

[.description]
--
If hibernate is not auto generating the schema, and Quarkus is running in development mode then Quarkus will attempt to validate the database after startup and print a log message if there are any problems.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__VALIDATE_IN_DEV_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__VALIDATE_IN_DEV_MODE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.active]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.active[quarkus.hibernate-orm."persistence-unit-name".active]`

[.description]
--
Whether this persistence unit should be active at runtime.

If the persistence unit is not active, it won't start with the application,
and accessing the corresponding EntityManagerFactory/EntityManager or SessionFactory/Session
will not be possible.

Note that if Hibernate ORM is disabled (i.e. `quarkus.hibernate-orm.enabled` is set to `false`),
all persistence units are deactivated, and setting this property to `true` will fail.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__ACTIVE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__ACTIVE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`'true' if Hibernate ORM is enabled; 'false' otherwise`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.unsupported-properties-full-property-key]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.unsupported-properties-full-property-key[quarkus.hibernate-orm."persistence-unit-name".unsupported-properties]`

[.description]
--
Properties that should be passed on directly to Hibernate ORM.
Use the full configuration property key here,
for instance `quarkus.hibernate-orm.unsupported-properties."hibernate.order_inserts" = true`.

[WARNING]
====
Properties set here are completely unsupported:
as Quarkus doesn't generally know about these properties and their purpose,
there is absolutely no guarantee that they will work correctly,
and even if they do, that may change when upgrading to a newer version of Quarkus
(even just a micro/patch version).
====

Consider using a supported configuration property before falling back to unsupported ones.
If none exists, make sure to file a feature request so that a supported configuration property can be added to Quarkus,
and more importantly so that the configuration property is tested regularly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__UNSUPPORTED_PROPERTIES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__UNSUPPORTED_PROPERTIES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect-dialect-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect-dialect-related-configuration[Dialect related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect[quarkus.hibernate-orm."persistence-unit-name".dialect]`

[.description]
--
Class name of the Hibernate ORM dialect. The complete list of bundled dialects is available in the
https://docs.jboss.org/hibernate/stable/orm/javadocs/org/hibernate/dialect/package-summary.html[Hibernate ORM
JavaDoc].

[NOTE]
====
Not all the dialects are supported in GraalVM native executables: we currently provide driver extensions for
PostgreSQL,
MariaDB, Microsoft SQL Server and H2.
====

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DIALECT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DIALECT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect.storage-engine]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.dialect.storage-engine[quarkus.hibernate-orm."persistence-unit-name".dialect.storage-engine]`

[.description]
--
The storage engine to use when the dialect supports multiple storage engines.

E.g. `MyISAM` or `InnoDB` for MySQL.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DIALECT_STORAGE_ENGINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DIALECT_STORAGE_ENGINE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query-query-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query-query-related-configuration[Query related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.query-plan-cache-max-size[quarkus.hibernate-orm."persistence-unit-name".query.query-plan-cache-max-size]`

[.description]
--
The maximum size of the query plan cache. see ++#++`QueryPlanCache++#++DEFAULT_QUERY_PLAN_MAX_COUNT`

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_QUERY_PLAN_CACHE_MAX_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.default-null-ordering[quarkus.hibernate-orm."persistence-unit-name".query.default-null-ordering]`

[.description]
--
Default precedence of null values in `ORDER BY` clauses.

Valid values are: `none`, `first`, `last`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_DEFAULT_NULL_ORDERING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_DEFAULT_NULL_ORDERING+++`
endif::add-copy-button-to-env-var[]
-- a|
`none`, `first`, `last` 
|`none`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.in-clause-parameter-padding]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.query.in-clause-parameter-padding[quarkus.hibernate-orm."persistence-unit-name".query.in-clause-parameter-padding]`

[.description]
--
Enables IN clause parameter padding which improves statement caching.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_IN_CLAUSE_PARAMETER_PADDING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__QUERY_IN_CLAUSE_PARAMETER_PADDING+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database-database-related-configuration[Database related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.charset]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.charset[quarkus.hibernate-orm."persistence-unit-name".database.charset]`

[.description]
--
The charset of the database. 
Used for DDL generation and also for the SQL import scripts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_CHARSET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_CHARSET+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/nio/charset/Charset.html[Charset]
 
|`UTF-8`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation[quarkus.hibernate-orm."persistence-unit-name".database.generation]`

[.description]
--
Select whether the database schema is generated or not. `drop-and-create` is awesome in development mode. This defaults to 'none', however if Dev Services is in use and no other extensions that manage the schema are present this will default to 'drop-and-create'. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.create-schemas[quarkus.hibernate-orm."persistence-unit-name".database.generation.create-schemas]`

[.description]
--
If Hibernate ORM should create the schemas automatically (for databases supporting them).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION_CREATE_SCHEMAS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION_CREATE_SCHEMAS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.generation.halt-on-error[quarkus.hibernate-orm."persistence-unit-name".database.generation.halt-on-error]`

[.description]
--
Whether we should stop on the first error when applying the schema.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION_HALT_ON_ERROR+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_GENERATION_HALT_ON_ERROR+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.default-catalog[quarkus.hibernate-orm."persistence-unit-name".database.default-catalog]`

[.description]
--
The default catalog to use for the database objects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_DEFAULT_CATALOG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_DEFAULT_CATALOG+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.database.default-schema[quarkus.hibernate-orm."persistence-unit-name".database.default-schema]`

[.description]
--
The default schema to use for the database objects.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_DEFAULT_SCHEMA+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DATABASE_DEFAULT_SCHEMA+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc-jdbc-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc-jdbc-related-configuration[JDBC related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.timezone]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.timezone[quarkus.hibernate-orm."persistence-unit-name".jdbc.timezone]`

[.description]
--
The time zone pushed to the JDBC driver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_TIMEZONE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_TIMEZONE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-fetch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-fetch-size[quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-fetch-size]`

[.description]
--
How many rows are fetched at a time by the JDBC driver.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_STATEMENT_FETCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_STATEMENT_FETCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-batch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.jdbc.statement-batch-size[quarkus.hibernate-orm."persistence-unit-name".jdbc.statement-batch-size]`

[.description]
--
The number of updates (inserts, updates and deletes) that are sent by the JDBC driver at one time for execution.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_STATEMENT_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__JDBC_STATEMENT_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch-fetching-logic-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch-fetching-logic-configuration[Fetching logic configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch.batch-size]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch.batch-size[quarkus.hibernate-orm."persistence-unit-name".fetch.batch-size]`

[.description]
--
The size of the batches used when loading entities and collections.

`-1` means batch loading is disabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__FETCH_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__FETCH_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`16`


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch.max-depth]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.fetch.max-depth[quarkus.hibernate-orm."persistence-unit-name".fetch.max-depth]`

[.description]
--
The maximum depth of outer join fetch tree for single-ended associations (one-to-one, many-to-one).

A `0` disables default outer join fetching.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__FETCH_MAX_DEPTH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__FETCH_MAX_DEPTH+++`
endif::add-copy-button-to-env-var[]
--|int 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache-caching-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache-caching-configuration[Caching configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.expiration.max-idle]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.expiration.max-idle[quarkus.hibernate-orm."persistence-unit-name".cache."cache".expiration.max-idle]`

[.description]
--
The maximum time before an object of the cache is considered expired.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__CACHE__CACHE__EXPIRATION_MAX_IDLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__CACHE__CACHE__EXPIRATION_MAX_IDLE+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.memory.object-count]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.cache.-cache-.memory.object-count[quarkus.hibernate-orm."persistence-unit-name".cache."cache".memory.object-count]`

[.description]
--
The maximum number of objects kept in memory in the cache.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__CACHE__CACHE__MEMORY_OBJECT_COUNT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__CACHE__CACHE__MEMORY_OBJECT_COUNT+++`
endif::add-copy-button-to-env-var[]
--|long 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.discriminator-discriminator-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.discriminator-discriminator-related-configuration[Discriminator related configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.discriminator.ignore-explicit-for-joined]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.discriminator.ignore-explicit-for-joined[quarkus.hibernate-orm."persistence-unit-name".discriminator.ignore-explicit-for-joined]`

[.description]
--
Existing applications rely (implicitly or explicitly) on Hibernate ignoring any DiscriminatorColumn declarations on joined inheritance hierarchies. This setting allows these applications to maintain the legacy behavior of DiscriminatorColumn annotations being ignored when paired with joined inheritance.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__DISCRIMINATOR_IGNORE_EXPLICIT_FOR_JOINED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts-database-scripts-related-configuration[Database scripts related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation[quarkus.hibernate-orm."persistence-unit-name".scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION_CREATE_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION_CREATE_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION_DROP_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__SCRIPTS_GENERATION_DROP_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log-logging-configuration[Logging configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.sql]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.sql[quarkus.hibernate-orm."persistence-unit-name".log.sql]`

[.description]
--
Show SQL logs and format them nicely. 
Setting it to true is obviously not recommended in production.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_SQL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.format-sql[quarkus.hibernate-orm."persistence-unit-name".log.format-sql]`

[.description]
--
Format the SQL logs if SQL log is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_FORMAT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_FORMAT_SQL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.jdbc-warnings[quarkus.hibernate-orm."persistence-unit-name".log.jdbc-warnings]`

[.description]
--
Whether JDBC warnings should be collected and logged.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_JDBC_WARNINGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_JDBC_WARNINGS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`depends on dialect`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.-persistence-unit-name-.log.queries-slower-than-ms[quarkus.hibernate-orm."persistence-unit-name".log.queries-slower-than-ms]`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_QUERIES_SLOWER_THAN_MS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM__PERSISTENCE_UNIT_NAME__LOG_QUERIES_SLOWER_THAN_MS+++`
endif::add-copy-button-to-env-var[]
--|long 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log-logging-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log-logging-configuration[Logging configuration]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.bind-parameters]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.bind-parameters[quarkus.hibernate-orm.log.bind-parameters]`

[.description]
--
Logs SQL bind parameters. 
Setting it to true is obviously not recommended in production.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_BIND_PARAMETERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_BIND_PARAMETERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.sql]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.sql[quarkus.hibernate-orm.log.sql]`

[.description]
--
Show SQL logs and format them nicely. 
Setting it to true is obviously not recommended in production.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_SQL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.format-sql]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.format-sql[quarkus.hibernate-orm.log.format-sql]`

[.description]
--
Format the SQL logs if SQL log is enabled

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_FORMAT_SQL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_FORMAT_SQL+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.jdbc-warnings]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.jdbc-warnings[quarkus.hibernate-orm.log.jdbc-warnings]`

[.description]
--
Whether JDBC warnings should be collected and logged.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_JDBC_WARNINGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_JDBC_WARNINGS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`depends on dialect`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.queries-slower-than-ms]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.log.queries-slower-than-ms[quarkus.hibernate-orm.log.queries-slower-than-ms]`

[.description]
--
If set, Hibernate will log queries that took more than specified number of milliseconds to execute.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_LOG_QUERIES_SLOWER_THAN_MS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_LOG_QUERIES_SLOWER_THAN_MS+++`
endif::add-copy-button-to-env-var[]
--|long 
|


h|[[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts-database-scripts-related-configuration]]link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts-database-scripts-related-configuration[Database scripts related configuration]

h|Type
h|Default

a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation[quarkus.hibernate-orm.scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|`none`


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation.create-target[quarkus.hibernate-orm.scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_CREATE_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_CREATE_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-general-config-items_quarkus.hibernate-orm.scripts.generation.drop-target[quarkus.hibernate-orm.scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_DROP_TARGET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_HIBERNATE_ORM_SCRIPTS_GENERATION_DROP_TARGET+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
